finished about and contact

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
         margin: 0;
       }
     </style>
-    <title>React Admin App</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>JasperMoens3D</title>
   </head>
 
   <body>
